# Advanced-PassGen

./: .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  Advanced PassGen.sln  CODE_OF_CONDUCT.md  Dockerfile  README.md  eslint.config.js  index.html  package.json  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
Advanced PassGen/: Advanced PassGen.csproj  App.config  App.xaml  App.xaml.cs  app.manifest  packages.config
Advanced PassGen/Classes/: Generator.cs  Password.cs  PasswordAdvisor.cs  PasswordGenerator.cs  StyleManager.cs  Update.cs  UpdateManager.cs
Advanced PassGen/Classes/Export/: ExportController.cs
Advanced PassGen/Classes/GUI/: StyleManager.cs
Advanced PassGen/Classes/PASSWORD/: Password.cs  PasswordController.cs
Advanced PassGen/Classes/UTIL/: GridViewSort.cs  SettingsBinder.cs
Advanced PassGen/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings
Advanced PassGen/Windows/: AboutWindow.xaml  AboutWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs
nginx/: nginx.conf
public/: index.html  manifest.json
src/: index.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capabilities.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/AlertDialog/: index.jsx
src/components/App/: index.jsx
src/components/ClippedDrawer/: index.jsx
src/components/CreatePasswordDialog/: index.jsx
src/components/CreateVaultDialog/: index.jsx
src/components/EditPasswordDialog/: index.jsx
src/components/EncryptionKeyDialog/: index.jsx
src/components/ExportDialog/: index.jsx
src/components/GridList/: index.jsx
src/components/LinearProgressWithLabel/: index.jsx
src/components/LoadingBar/: index.jsx
src/components/MuiVirtualizedTable/: index.jsx
src/components/PasswordTips/: index.jsx
src/components/SelectFileDialog/: index.jsx
src/components/Theme/: index.jsx
src/components/TopBar/: index.jsx
src/components/UpdateDialog/: index.jsx
src/components/VaultCard/: index.jsx
src/contexts/MainContextProvider/: index.jsx
src/contexts/PasswordContextProvider/: index.jsx
src/contexts/VaultContextProvider/: index.jsx
src/hooks/: usePasswordGeneratorWorker.js
src/languages/: de_de.json  en_us.json  es_es.json  fr_fr.json  jp_jp.json  nl_nl.json  ru_ru.json  tr_tr.json  zh_CN.json  zh_cn.json
src/reducers/MainReducer/: index.js
src/reducers/MainReducer/Actions/: actionTypes.js  index.js
src/reducers/PasswordReducer/: index.js
src/reducers/PasswordReducer/Actions/: actionTypes.js  index.js
src/reducers/VaultReducer/: index.js
src/reducers/VaultReducer/Actions/: actionTypes.js  index.js
src/routes/About/: index.jsx
src/routes/Advanced/: index.jsx
src/routes/Advisor/: index.jsx
src/routes/Generate/: index.jsx
src/routes/Home/: index.jsx
src/routes/NotFound/: index.jsx
src/routes/Settings/: index.jsx
src/routes/Vault/: index.jsx
src/utils/PasswordGenerator/: index.js
src/utils/PasswordStrength/: index.js
src/utils/ThemeSelector/: index.js
src/utils/Updater/: index.js
src/workers/: passwordGenerator.worker.js
