[package]
name = "advanced-passgen"
version = "2.5.1"
description = "Advanced PassGen can be used to quickly generate thousands of passwords"
authors = ["CodeDead <admin@codedead.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/CodeDead/Advanced-PassGen"
default-run = "advanced-passgen"
edition = "2021"
rust-version = "1.79.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.1", features = [ "dialog-open", "clipboard-write-text", "dialog-save", "os-all"] }
open = "5.3.0"
rand = "0.8.5"
unicode-segmentation = "1.11.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is a URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
