[package]
name = "advanced-passgen"
version = "2.5.2"
description = "Advanced PassGen can be used to quickly generate thousands of passwords"
authors = ["CodeDead <admin@codedead.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/CodeDead/Advanced-PassGen"
default-run = "advanced-passgen"
edition = "2024"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5.1", features = [] }
open = "5.3.2"
rand = "0.9.1"
unicode-segmentation = "1.12.0"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-os = "2.2.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is a URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
