[package]
name = "advanced-passgen"
version = "2.6.0"
description = "Advanced PassGen can be used to quickly generate thousands of passwords"
authors = ["CodeDead <admin@codedead.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/CodeDead/Advanced-PassGen"
default-run = "advanced-passgen"
edition = "2024"
rust-version = "1.96.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
open = "5.3.5"
rand = "0.10.1"
unicode-segmentation = "1.13.3"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-os = "2.3.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is a URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
